# codeagent

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_LOG.md  FINAL_STATUS.md  GETTING_STARTED.md  INDEX.md  PHASE1_SUMMARY.md  PHASE2_ARCHITECTURE.md  PHASE2_COMPLETION.md  PHASE2_INDEX.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PROJECT_STRUCTURE.txt  README.md  STATUS.md  verify-setup.sh
.github/workflows/: release.yml
docs/: _config.yml  index.html
src/: cli.rs  main.rs
src/cache/: analyzer.rs  mod.rs  storage.rs
src/config/: mod.rs  yaml_parser.rs
src/core/: config.rs  context.rs  executor.rs  mod.rs  planner.rs
src/error_correction/: analyzer.rs  mod.rs
src/integrations/: git.rs  mod.rs  ollama.rs  test_runner.rs
src/interactive/: mod.rs  mode.rs
src/llm/: anthropic.rs  client.rs  mod.rs  openai.rs
src/parsers/: lint_parser.rs  mod.rs  test_parser.rs
src/pr_generator/: generator.rs  github.rs  mod.rs
src/tui/: app.rs  events.rs  handler.rs  mod.rs  ui.rs
src/utils/: file_utils.rs  mod.rs  search.rs
web/: package-lock.json  package.json
